--- a/.github/workflows/crypto_predictor2.yml
+++ b/.github/workflows/crypto_predictor2.yml
@@ -29,3 +29,9 @@ jobs:
       with:
         name: predictions
         path: predictions.json
+
+    - name: Debug Predictions Output
+      run: |
+        echo "Contents of predictions.json:"
+        cat predictions.json
+
