--- a/.github/workflows/crypto_predictor2.yml
+++ b/.github/workflows/crypto_predictor2.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Deploy Predictions to GitHub Pages
       env:
-        GITHUB_TOKEN: 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
+        GITHUB_TOKEN: ${{ secrets.Token }}  # Use the secret token
       run: |
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
