--- a/.github/workflows/crypto_predictor2.yml
+++ b/.github/workflows/crypto_predictor2.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
     - name: Checkout Repository
-      uses: actions/checkout@v3  # Fetch the latest code
+      uses: actions/checkout@v3
 
     - name: Set Up Python
       uses: actions/setup-python@v4
@@ -19,7 +19,7 @@ jobs:
         python-version: '3.10'
 
     - name: Install Dependencies
-      run: pip install -r requirements.txt  # Install required Python libraries
+      run: pip install -r requirements.txt
 
     - name: Run Predictor Script
       run: python app.py  # Generate predictions.json
@@ -31,13 +31,13 @@ jobs:
 
     - name: Deploy Predictions to GitHub Pages
       env:
-        GITHUB_TOKEN: ${{ secrets.Token }}  # Use the secret token
+        GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}  # Use the renamed secret
       run: |
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
         mkdir -p docs
         cp predictions.json docs/
-        touch docs/.nojekyll  # Add the .nojekyll file
+        touch docs/.nojekyll
         git add docs/predictions.json docs/.nojekyll
         git commit -m "Update predictions.json"
         git push origin main
