--- a/.github/workflows/crypto_predictor2.yml
+++ b/.github/workflows/crypto_predictor2.yml
@@ -1,7 +1,7 @@
 name: Run Crypto Predictor
 
 on:
-  workflow_dispatch:  # Allows manual triggering of the workflow
+  # workflow_dispatch:  # Allows manual triggering of the workflow
   schedule:
     - cron: '0 0 * * *'  # Runs daily at midnight UTC
 
