--- a/.github/workflows/crypto_predictor2.yml
+++ b/.github/workflows/crypto_predictor2.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # GitHub Actions runner
 
     steps:
     - name: Checkout Repository
@@ -21,17 +21,17 @@ jobs:
     - name: Install Dependencies
       run: pip install -r requirements.txt
 
+    - name: Debug Installed Packages
+      run: pip list  # List installed packages to verify `dotenv` is installed
+
     - name: Run Predictor Script
-      run: python app.py  # Generate predictions.json
+      run: python app.py
 
-    - name: Debug Generated JSON
-      run: cat predictions.json
-
-    - name: Deploy to GitHub Pages
+    - name: Deploy Predictions
       env:
         GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
       run: |
-        touch .nojekyll  # Add .nojekyll to disable Jekyll
+        touch .nojekyll
         git add predictions.json .nojekyll
         git commit -m "Update predictions.json" || echo "No changes to commit"
-        git push origin main --force
+        git push origin main
