--- a/.github/workflows/crypto_predictor2.yml
+++ b/.github/workflows/crypto_predictor2.yml
@@ -70,8 +70,8 @@ jobs:
       run: |
         git remote set-url origin https://x-access-token:${{ secrets.PERSONAL_ACCESS_TOKEN }}@github.com/${{ github.repository }}
 
-    - name: Pull Remote Changes
-      run: git pull origin main --rebase
+    # - name: Pull Remote Changes
+    #   run: git pull origin main --rebase
 
     - name: Deploy to GitHub Pages
       run: |
