--- a/.github/workflows/crypto_predictor2.yml
+++ b/.github/workflows/crypto_predictor2.yml
@@ -70,8 +70,13 @@ jobs:
       run: |
         git remote set-url origin https://x-access-token:${{ secrets.PERSONAL_ACCESS_TOKEN }}@github.com/${{ github.repository }}
 
-    # - name: Pull Remote Changes
-    #   run: git pull origin main --rebase
+    - name: Commit Local Changes
+      run: |
+        git add predictions.json .nojekyll
+        git commit -m "Temporary commit for predictions.json" || echo "No changes to commit"
+
+    - name: Pull Remote Changes
+      run: git pull origin main --rebase
 
     - name: Deploy to GitHub Pages
       run: |
